--- a/client/package.json
+++ b/client/package.json
@@ -38,5 +38,8 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
+  },
+  "build": {
+    "chunkSizeWarningLimit": 1000
   }
 }
