--- a/client/package.json
+++ b/client/package.json
@@ -21,8 +21,10 @@
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
+    "react-select": "^5.8.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
